# aoc22

./: Cargo.toml  cargo
problems/: day1.md
src/: main.rs
src/problems/: day1.rs
