[package]
name = "aoc22"
authors = ["Tony Skuse <tskuse@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "A command-line interface for solving problems for Advent of Code 2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
